Implementação dos mecanismos de autenticação no serviço de compras