@@ -1,8 +1,10 @@
 package br.com.gabrielflorentino.java.back.end.service;
 
+import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 
@@ -10,12 +12,14 @@ import br.com.gabrielflorentino.java.back.end.converter.DTOConverter;
 import br.com.gabrielflorentino.java.back.end.dto.ItemDTO;
 import br.com.gabrielflorentino.java.back.end.dto.ProductDTO;
 import br.com.gabrielflorentino.java.back.end.dto.ShopDTO;
+import br.com.gabrielflorentino.java.back.end.dto.ShopReportDTO;
 import br.com.gabrielflorentino.java.back.end.dto.UserDTO;
 import br.com.gabrielflorentino.java.back.end.exception.ProductNotFoundException;
 import br.com.gabrielflorentino.java.back.end.model.Shop;
 import br.com.gabrielflorentino.java.back.end.repository.ShopRepository;
 
 @Service
+
 public class ShopService {
 
 	private final ShopRepository shopRepository;
@@ -30,17 +34,17 @@ public class ShopService {
 
 	public List<ShopDTO> getAll() {
 		List<Shop> shops = shopRepository.findAll();
-		return shops.stream().map(DTOConverter::convert).toList();
+		return shops.stream().map(DTOConverter::convert).collect(Collectors.toList());
 	}
 
 	public List<ShopDTO> getByUser(String userIdentifier) {
 		List<Shop> shops = shopRepository.findAllByUserIdentifier(userIdentifier);
-		return shops.stream().map(DTOConverter::convert).toList();
+		return shops.stream().map(DTOConverter::convert).collect(Collectors.toList());
 	}
 
 	public List<ShopDTO> getByDate(ShopDTO shopDTO) {
 		List<Shop> shops = shopRepository.findAllByDateGreaterThan(shopDTO.getDate());
-		return shops.stream().map(DTOConverter::convert).toList();
+		return shops.stream().map(DTOConverter::convert).collect(Collectors.toList());
 	}
 
 	public ShopDTO findById(long ProductId) {
@@ -51,14 +55,13 @@ public class ShopService {
 		throw new ProductNotFoundException();
 	}
 
-	public ShopDTO save(ShopDTO shopDTO, String key) {		
+	public ShopDTO save(ShopDTO shopDTO, String key) {
 		UserDTO userDTO = userService.getUserByCpf(shopDTO.getUserIdentifier(), key);
 		validateProducts(shopDTO.getItems());
-		
 		shopDTO.setTotal(shopDTO.getItems()
-				  .stream()
-				  .map(x -> x.getPrice())
-				  .reduce((float) 0, Float::sum));
+				.stream()
+				.map(x -> x.getPrice())
+				.reduce((float) 0, Float::sum));
 		
 		Shop shop = Shop.convert(shopDTO);
 		shop.setDate(LocalDateTime.now());
@@ -68,14 +71,24 @@ public class ShopService {
 	}
 
 	private boolean validateProducts(List<ItemDTO> items) {
-		for (ItemDTO  item : items) {
+		for (ItemDTO item : items) {
 			ProductDTO productDTO = productService.getProductByIdentifier(item.getProductIdentifier());
 			if (productDTO == null) {
 				return false;
 			}
 			item.setPrice(productDTO.getPreco());
 		}
-		return true;		
+		return true;
+	}
+
+	public List<ShopDTO> getShopsByFilter(LocalDate dataInicio, LocalDate dataFim, Float valorMinimo) {
+		List<Shop> shops = shopRepository.getShopByFilters(dataInicio, dataFim, valorMinimo);
+		return shops.stream().map(DTOConverter::convert).collect(Collectors.toList());
+
+	}
+
+	public ShopReportDTO getReportByDate(LocalDate dataInicio, LocalDate dataFim) {
+		return shopRepository.getReportByDate(dataInicio, dataFim);
 	}
 
 }
